[package]
name = "slime-search"
version = "0.1.0"
edition = "2021"
description = "Minecraft multi-chunk slime cluster searcher"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "slime-search"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.rayon]
version = "1"
optional = true

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]
parallel = ["rayon"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false